# download-simulator

./: Dockerfile  ISSUES.md  QUICK_FIXES.md  README.md  REPOSITORY_ANALYSIS_SUMMARY.md  SECURITY_ANALYSIS.md  nginx.conf  supervisord.conf
.github/workflows/: docker-image.yml
backend/: README_COMPREHENSIVE.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  constants.ts
frontend/src/assets/: main.css
frontend/src/components/: DownloadBasic.vue  DownloadHttpError.vue  DownloadNewTab.vue  DownloadNoContentLength.vue  DownloadRedirect.vue
frontend/src/router/: index.ts
